--- a/anotherpage.html
+++ b/anotherpage.html
@@ -13,7 +13,7 @@
 <body   class="bg-blue-50 p-5" >
 
     <header >
-        <section class="">
+        <section class="pb-10">
             <nav class="flex justify-between bg-white p-5 rounded-lg w-10/12 mx-auto">
                 <div class="flex items-center gap-3">
                     <img src="assets/logo.png" alt="">
